--- a/search/conf/log4j.properties
+++ b/search/conf/log4j.properties
@@ -1,4 +1,13 @@
-log4j.rootLogger=info, info_log, debug_log, console
+log4j.rootLogger=info, global_log
+log4j.logger.com.wu.search.one.Search=debug, debug_log, info_log, console
+
+log4j.appender.global_log=org.apache.log4j.RollingFileAppender
+log4j.appender.global_log.File=logs/global.log
+log4j.appender.global_log.layout=org.apache.log4j.PatternLayout
+log4j.appender.global_log.layout.ConversionPattern=[%d] %-5p - %m%n
+log4j.appender.global_log.MaxFileSize=1000KB
+log4j.appender.global_log.MaxBackupIndex=10
+log4j.appender.global_log.threshold=info
 
 log4j.appender.debug_log=org.apache.log4j.RollingFileAppender
 log4j.appender.debug_log.File=logs/debug.log
